header padding top added

--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ p{
 
 .heading h1{
   font-size: 500%;
-  padding: 20px 0;
+  padding: 140px 0 30px 0;
   color: #4990E2;
   opacity: 0.7;
   line-height: 1.2;
