--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,13 @@ h3{
     margin-bottom: 10px;
 }
 
+.skill{
+  list-style: none;
+  font-size: 16px;
+  padding: 4px 0;
+
+}
+
 /* Portfolio section*/
 #portfolio{
   margin-top: 60px;
@@ -184,7 +191,7 @@ footer a{
   background: #000;
 }
 
-/* media q*/
+/* media queries*/
 @media only screen and (max-width: 500px) {
   .hero-info{
     max-width: 100%;
