--- a/css/style.css
+++ b/css/style.css
@@ -105,16 +105,26 @@ h3{
 /* Portfolio section*/
 #portfolio{
   margin-top: 60px;
+
 }
 .port-heading{
   padding-bottom: 30px;
 }
 .portfolio-item{
   width: 270px;
+
 }
-figcaption p{
-  padding: 5px;
-  text-decoration: none;
+figure {
+  float: right;
+  width: 100%;
+  text-align: center;
+  font-style: italic;
+  font-size: smaller;
+  text-indent: 0;
+  border: thin  solid #666666;
+  padding: 4px;
+  margin: 4px;
+
 }
 
 /* skills section */
