--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,8 @@ img{
 h1{
   font-size: 50px;
   font-size: 70px;
-  color: var(--orange);
+  color: #fff;
+  line-height: 1.3;
 }
 h2{
   color: var(--black);
