--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,12 @@ img{
   width: 100%;
 }
 h1{
-  font-size: 50px;
+ 
   font-size: 70px;
   color: #fff;
-  line-height: 1.3;
+  margin-bottom: 0;
+  padding: 3px;
+  
 }
 h2{
   color: var(--black);
