--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,49 @@ color: #ffffff;
 .center h3{
   text-decoration: underline;
 }
+
+/* contact Form */
+
+#contact-form{
+  background: var(--blue);
+  padding: 50px 0;
+}
+#contact-form h2{
+  color: #fff;
+  opacity: 9;
+}
+#contact-form form{
+  margin: 50px 0;
+}
+
+#contact-form button{
+  background: #fff;
+  color: var(--black);
+  font-size: 20px;
+  margin-top: 0;
+  border-radius: 4px;
+}
+#contact-form button:hover, #contact-form button:focus{
+  background: var(--orange);
+
+}
+
+#contact-form input, #contact-form textarea{
+  padding: 10px 0 10px 20px;
+}
+#contact-form input, 
+#contact-form textarea, 
+#contact-form button
+ {
+  width: 50%;
+  font-size: 16px;
+  line-height: 1.5;
+  
+}
+
+
+
+
 /* Media queries*/
 
 @media(max-width: 800px){
@@ -179,9 +222,17 @@ color: #ffffff;
   h2{
     font-size: 25px;
   }
+
+  /* Contact Form */
+  #contact-form input, #contact-form textarea, #contact-form button{
+    width: 90%;
+    font-size: 16px;
+    line-height: 1.3;
+    padding-left: 10px;
+  }
+}
   
 
-}
 
 @media(max-width: 500px){
   .nav-bar{
@@ -232,3 +283,4 @@ color: #ffffff;
   }
   
 }
+
